Handle no highlights found and add more tests